src/resources/css/style.css
/* ... */
@keyframes fadeIn {
  from {
    opacity:  0;
   
  }
  to {
    opacity:  1;

  }
}
#three-dots{
  animation: fadeIn 3.5s ease-in-out;
}
@keyframes fadeOut {
  from { opacity:  1; max-height: auto; }
  to { opacity:  0; max-height:  0; }
}


.fade-out {
  animation-name: fadeOut;
  animation-duration:  0.2s;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}

.nav-main{
  width: 100vw;
  display: flex;
  justify-content: space-between;

}
.nav-main-item{
  padding:8px;
  font-family: 'Playfair Display', serif; 
  font-size:12px;
  color: gray;
  cursor:pointer;
}
.nav-main-item:last-child{
  margin-right: 8px;
}
.ai-p{
font-family: var(--small-font);
  width:80%;
  margin: -16px auto 16px auto;
  text-align:center;
  font-size: 20px;
  max-width:700px;
}
@media(min-width:330px){
  .ai-p{
    text-align:justify;
  }
}
.ai-p > span{
font-size: small;
margin-top:16px;

}
.show-ai-paragraph-container{
  margin:auto;
  width:80%;
  max-width:1200px;
 margin-top:24px;
 
}
.new-paragraph{
  font-family: 'Great Vibes', cursive;
  font-family: 'Playfair Display', serif;
  font-size: 32px;
}
@media(min-width:610px){
  .new-paragraph{  
    font-size: 40px;
  }
}
.new-paragraph::first-letter {
  font-weight: bold; /* Hace que la primera letra sea negrita */
  font-size: 200%; /* Aumenta el tamaño de la primera letra */
}
#create-text-p{
  text-align: center;
  margin-top:8px;
}
.smaller{
  font-size:24px !important;
}
.archive-btns-container{
  margin:auto;
  display:flex;
  flex-direction: column;
  gap:12px;
  padding: 0 12px;
}
@media(min-width:450px){
  .archive-btns-container{
    flex-direction: row;
    gap:32px;
  }
}
.small-text{
  color: var(--gray);
}
.tiny-note{
  color: var(--gray);
  font-size:10px;
}
.center{
  text-align: center;
}
.form-settings{
  display:flex;
  margin: 8px auto 24px auto;

}

.bg_gray{
  background-color: rgb(219, 211, 211);
}

#form-settings-language {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 8px;
  align-items: end;
 }
 
 .name-flag-cont {
  display: flex;
  align-items:first baseline; 
  justify-content: flex-start;

  gap:8px;
 }
 
 .flag {
  width: 25px;
  margin: 12px 0 0 8px; 
 }
 #change-voice-btn{
  width:100%;
 }

 .modalScroll{
  display: none;
  position: fixed;
  z-index: 1;
  bottom: 20px; 
  right: 20px; 
  width: 50px; 
  height: 50px; 
  background-color: rgba(0,0,0,0); 
  border-radius: 50%; 
  display: flex;
  justify-content: center;
  align-items: center;
}
.modalScroll:hover{
  scale:1.1;
}

.modal-content {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--light-gray);
  cursor: pointer;
  border-radius: 50%;
  padding: 12px 0;
}

